# vulkan_toy

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  shell.nix
include/core/: commands.hpp  context.hpp  descriptor.hpp
include/rendergraph/: graph.hpp  resources.hpp
include/utils/: error.hpp  expected.hpp  utils.hpp
include/vulkan/: structs.hpp  vulkan_create_infos.hpp  vulkan_initializers.hpp  vulkan_utils.hpp
src/: main.cpp
src/core/: commands.cpp  context.cpp  descriptor.cpp
src/rendergraph/: graph.cpp
src/utils/: utils.cpp
src/vulkan/: pipeline.cpp  vulkan_initializers.cpp  vulkan_utils.cpp
